Added name, school, and bio

--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Derek's Personal Site</title>
-  </head>
-  <body>
-<h1>Derek Bell</h1>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Derek's Personal Site</title>
+</head>
+
+<body>
+  <h1>Derek Bell</h1>
+  <hr size="3" noshade>
+  <p><em>Fourth Year Biomedical Engineering Student</></em></p>
+  <hr size="3" noshade>
+  <p>I am a fourth year student in the Biomedical Engineering program at the University of Victoria.
+    I am currently taking online coding courses in web development to create my very own
+    website to display my projects I have created and / or worked on.</p>
+  <hr size="10" noshade>
+  <h2>Education</h2>
+  <h3><strong>University of Victoria</strong></h3>
+  <h4>Biomedical Engineering</h4>
+
+</body>
+
 </html>
