Added Education section of post-secondary schools I have attended

--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -15,9 +15,21 @@
     I am currently taking online coding courses in web development to create my very own
     website to display my projects I have created and / or worked on.</p>
   <hr size="10" noshade>
-  <h2>Education</h2>
-  <h3><strong>University of Victoria</strong></h3>
-  <h4>Biomedical Engineering</h4>
+  <h3>Education</h3>
+  <ul>
+    <li><strong>University of Victoria</strong>
+    <ul>
+      <li>Fourth Year Biomedical Engineering Student</li>
+      <li>Attended from September 2015 to Present</li>
+    </ul>
+    </li>
+    <li><strong>Thompson Rivers University</strong>
+      <ul>
+        <li>Completed Engineering Transfer Program</li>
+        <li>Attended from September 2013 to April 2015</li>
+      </ul>
+
+  </ul>
 
 </body>
 
