Added my first hyperlink

--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -7,29 +7,39 @@
 </head>
 
 <body>
+  <img src="https://scontent.fyvr3-1.fna.fbcdn.net/v/t1.0-1/p160x160/44416416_10158377854109848_4263308825773211648_n.jpg?_nc_cat=107&_nc_ht=scontent.fyvr3-1.fna&oh=d6e20406130fec8ff9fd45f9a6dd13eb&oe=5D1F3C88" alt="derek profile picture">
   <h1>Derek Bell</h1>
-  <hr size="3" noshade>
   <p><em>Fourth Year Biomedical Engineering Student</></em></p>
+  <p>Currently on a 4 month co-op term with the <strong><a href="www.victoriahandproject.com">Victoria Hand Project</a></strong></p>
   <hr size="3" noshade>
   <p>I am a fourth year student in the Biomedical Engineering program at the University of Victoria.
     I am currently taking online coding courses in web development to create my very own
-    website to display my projects I have created and / or worked on.</p>
-  <hr size="10" noshade>
+    website to display my projects I have created and / or worked on, as well as show a little about myself. This website was created using HTML, CSS and JavaScript.</p>
+  <hr size="3" noshade>
   <h3>Education</h3>
   <ul>
     <li><strong>University of Victoria</strong>
-    <ul>
-      <li>Fourth Year Biomedical Engineering Student</li>
-      <li>Attended from September 2015 to Present</li>
-    </ul>
+      <ul>
+        <li>Fourth Year Biomedical Engineering Student</li>
+        <li>Attended from September 2015 to Present
+        <li>Expected graduation of Fall 2019</li>
+      </ul>
     </li>
     <li><strong>Thompson Rivers University</strong>
       <ul>
         <li>Completed Engineering Transfer Program</li>
         <li>Attended from September 2013 to April 2015</li>
       </ul>
-
   </ul>
+  <hr size="3" noshade>
+  <h3>Hobbies</h3>
+  <ol>
+    <li>Strength training</li>
+    <li>Hiking</li>
+    <li>Gaming</li>
+    <li>Learning to code</li>
+  </ol>
+  <hr size="3" noshade>
 
 </body>
 
