--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -7,10 +7,19 @@
 </head>
 
 <body>
-  <img src="https://scontent.fyvr3-1.fna.fbcdn.net/v/t1.0-1/p160x160/44416416_10158377854109848_4263308825773211648_n.jpg?_nc_cat=107&_nc_ht=scontent.fyvr3-1.fna&oh=d6e20406130fec8ff9fd45f9a6dd13eb&oe=5D1F3C88" alt="derek profile picture">
-  <h1>Derek Bell</h1>
-  <p><em>Fourth Year Biomedical Engineering Student</></em></p>
-  <p>Currently on a 4 month co-op term with the <strong><a href="https://www.victoriahandproject.com/">Victoria Hand Project</a></strong></p>
+  <table cellspacing="45">
+    <tr>
+      <td><img src="https://scontent.fyvr3-1.fna.fbcdn.net/v/t1.0-1/p160x160/44416416_10158377854109848_4263308825773211648_n.jpg?_nc_cat=107&_nc_ht=scontent.fyvr3-1.fna&oh=d6e20406130fec8ff9fd45f9a6dd13eb&oe=5D1F3C88" alt="derek profile picture">
+      </td>
+      <td>
+        <h1>Derek Bell</h1>
+        <p><em>Fourth Year Biomedical Engineering Student</></em></p>
+        <p>Currently on a 4 month co-op term with the <strong><a href="https://www.victoriahandproject.com/">Victoria Hand Project</a></strong></p>
+      </td>
+    </tr>
+  </table>
+
+
   <hr size="3" noshade>
   <p>I am a fourth year student in the Biomedical Engineering program at the University of Victoria.
     I am currently taking online coding courses in web development to create my very own
@@ -40,6 +49,51 @@
     <li>Learning to code</li>
   </ol>
   <hr size="3" noshade>
+  <h3>Work Experience</h3>
+  <table cellspacing=20>
+    <thead>
+      <tr>
+        <th>Dates</th>
+        <th>Work</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>January 2019 - Present</td>
+        <td>Senior Mechanical Engineering Assistant</td>
+      </tr>
+      <tr>
+        <td>May 2018 - August 2019</td>
+        <td>Virtual Reality Mobile Application Developer</td>
+      </tr>
+    </tbody>
+  </table>
+  <hr size="3" noshade>
+  <h3>Skills</h3>
+  <table cellspacing="10">
+    <thead>
+      <th>Programming Languages</th>
+    </thead>
+    <tr>
+      <td>
+        <table>
+          <tr>
+            <td>Python</td>
+          </tr>
+          <tr>
+            <td>C</td>
+          </tr>
+          <tr>
+            <td>HTML/CSS/JavaScript</td>
+          </tr>
+          <tr>
+            <td>C#</td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
+
   <p><strong><a href="contact.html">Contact Me</a></strong></p>
 </body>
 
