--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -6,7 +6,7 @@
   <title>Derek's Personal Site</title>
 </head>
 
-<body>
+<body style="background-color: #e4f9f5;">
   <table cellspacing="45">
     <tr>
       <td><img src="https://scontent.fyvr3-1.fna.fbcdn.net/v/t1.0-1/p160x160/44416416_10158377854109848_4263308825773211648_n.jpg?_nc_cat=107&_nc_ht=scontent.fyvr3-1.fna&oh=d6e20406130fec8ff9fd45f9a6dd13eb&oe=5D1F3C88" alt="derek profile picture">
