--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -5,14 +5,13 @@
   <meta charset="utf-8">
   <title>Derek's CV</title>
   <link rel="stylesheet" href="../css/styles.css">
+  <link rel="icon" href="favicon.ico">
 </head>
-
-
 
 <body>
   <table cellspacing="45">
     <tr>
-      <td><img src="https://scontent.fyvr3-1.fna.fbcdn.net/v/t1.0-1/p160x160/44416416_10158377854109848_4263308825773211648_n.jpg?_nc_cat=107&_nc_ht=scontent.fyvr3-1.fna&oh=d6e20406130fec8ff9fd45f9a6dd13eb&oe=5D1F3C88" alt="derek profile picture">
+      <td><img id=profilePic src="https://scontent.fyvr3-1.fna.fbcdn.net/v/t1.0-1/p160x160/44416416_10158377854109848_4263308825773211648_n.jpg?_nc_cat=107&_nc_ht=scontent.fyvr3-1.fna&oh=d6e20406130fec8ff9fd45f9a6dd13eb&oe=5D1F3C88" alt="derek profile picture">
       </td>
       <td>
         <h1>Derek Bell</h1>
@@ -23,11 +22,11 @@
   </table>
 
 
-  <hr size="3" noshade>
+  <hr>
   <p>I am a fourth year student in the Biomedical Engineering program at the University of Victoria.
     I am currently taking online coding courses in web development to create my very own
     website to display my projects I have created and / or worked on, as well as show a little about myself. This website was created using HTML, CSS and JavaScript.</p>
-  <hr size="3" noshade>
+  <hr>
   <h3>Education</h3>
   <ul>
     <li><strong>University of Victoria</strong>
@@ -43,7 +42,7 @@
         <li>Attended from September 2013 to April 2015</li>
       </ul>
   </ul>
-  <hr size="3" noshade>
+  <hr>
   <h3>Hobbies</h3>
   <ol>
     <li>Strength training</li>
@@ -51,7 +50,7 @@
     <li>Gaming</li>
     <li>Learning to code</li>
   </ol>
-  <hr size="3" noshade>
+  <hr>
   <h3>Work Experience</h3>
   <table cellspacing=20>
     <thead>
@@ -71,7 +70,7 @@
       </tr>
     </tbody>
   </table>
-  <hr size="3" noshade>
+  <hr>
   <h3>Skills</h3>
   <table cellspacing="10">
     <thead>
