--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -9,19 +9,24 @@
 </head>
 
 <body>
-  <table cellspacing="45">
-    <tr>
-      <td><img id=profilePic src="https://scontent.fyvr3-1.fna.fbcdn.net/v/t1.0-1/p160x160/44416416_10158377854109848_4263308825773211648_n.jpg?_nc_cat=107&_nc_ht=scontent.fyvr3-1.fna&oh=d6e20406130fec8ff9fd45f9a6dd13eb&oe=5D1F3C88" alt="derek profile picture">
-      </td>
-      <td>
-        <h1>Derek Bell</h1>
-        <p><em>Fourth Year Biomedical Engineering Student</></em></p>
-        <p>Currently on a 4 month co-op term with the <strong><a href="https://www.victoriahandproject.com/">Victoria Hand Project</a></strong></p>
-      </td>
-    </tr>
-  </table>
+  <div class="topContainer">
+    <img class=Circular src="https://scontent.fyvr3-1.fna.fbcdn.net/v/t1.0-1/p160x160/44416416_10158377854109848_4263308825773211648_n.jpg?_nc_cat=107&_nc_ht=scontent.fyvr3-1.fna&oh=d6e20406130fec8ff9fd45f9a6dd13eb&oe=5D1F3C88"
+      alt="derek profile picture">
+      <img src="../images/cloud.png" alt="cloud-img">
+    <h1>I'm Derek</h1>
+    <p>a fourth year biomedical engineering student</p>
+    <img src="../images/cloud.png" alt="cloud-img">
+    <img src="../images/mountain.png" alt="mountain-img">
+  </div>
+  <div class="middleContainer">
 
+  </div>
 
+  <div class="bottomContainer">
+
+  </div>
+
+  <p>Currently on a 4 month co-op term with the <strong><a href="https://www.victoriahandproject.com/">Victoria Hand Project</a></strong></p>
   <hr>
   <p>I am a fourth year student in the Biomedical Engineering program at the University of Victoria.
     I am currently taking online coding courses in web development to create my very own
