Changes made with absolute and relative positioning

--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -10,12 +10,10 @@
 
 <body>
   <div class="topContainer">
-    <img class=Circular src="https://scontent.fyvr3-1.fna.fbcdn.net/v/t1.0-1/p160x160/44416416_10158377854109848_4263308825773211648_n.jpg?_nc_cat=107&_nc_ht=scontent.fyvr3-1.fna&oh=d6e20406130fec8ff9fd45f9a6dd13eb&oe=5D1F3C88"
-      alt="derek profile picture">
-      <img src="../images/cloud.png" alt="cloud-img">
+      <img class="top-cloud" src="../images/cloud.png" alt="cloud-img">
     <h1>I'm Derek</h1>
     <p>a fourth year biomedical engineering student</p>
-    <img src="../images/cloud.png" alt="cloud-img">
+    <img class="bottom-cloud" src="../images/cloud.png" alt="cloud-img">
     <img src="../images/mountain.png" alt="mountain-img">
   </div>
   <div class="middleContainer">
