--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -6,100 +6,53 @@
   <title>Derek's CV</title>
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Nunito+Sans|Patua+One|Sacramento" rel="stylesheet">
+
 </head>
 
 <body>
   <div class="topContainer">
       <img class="top-cloud" src="../images/cloud.png" alt="cloud-img">
     <h1>I'm Derek</h1>
-    <p>a fourth year biomedical engineering student</p>
+    <h2>a fourth year biomedical engineering student</h2>
     <img class="bottom-cloud" src="../images/cloud.png" alt="cloud-img">
     <img src="../images/mountain.png" alt="mountain-img">
   </div>
-  <div class="middleContainer">
-
+  <div class="middle-container">
+    <div class="profile">
+      <img class='Circular' src="https://scontent.fyvr3-1.fna.fbcdn.net/v/t1.0-1/p160x160/44416416_10158377854109848_4263308825773211648_n.jpg?_nc_cat=107&_nc_ht=scontent.fyvr3-1.fna&oh=d6e20406130fec8ff9fd45f9a6dd13eb&oe=5D1F3C88" alt="profile-pic">
+      <h2>Hello</h2>
+      <p class="intro">I am currently in my fourth year of engineering at the University of Victoria, and am learning various programming languages.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills</h2>
+      <div class="skill-row">
+        <img class="programSkill" src=../images/programming.png alt="programming-img">
+        <h3>Programming</h3>
+        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+      </div>
+      <div class="skill-row">
+        <img class="cadSkill" src="../images/3d-printing.png" alt="cad-img">
+        <h3>3D CAD Modelling & 3D Printing</h3>
+        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+      <p class="contact-message">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <a class="butn" href="mailto:derek.bell10@gmail.com">CONTACT ME</a>
+    </div>
   </div>
 
-  <div class="bottomContainer">
 
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <p>© 2019 Derek Bell.</p>
   </div>
 
-  <p>Currently on a 4 month co-op term with the <strong><a href="https://www.victoriahandproject.com/">Victoria Hand Project</a></strong></p>
-  <hr>
-  <p>I am a fourth year student in the Biomedical Engineering program at the University of Victoria.
-    I am currently taking online coding courses in web development to create my very own
-    website to display my projects I have created and / or worked on, as well as show a little about myself. This website was created using HTML, CSS and JavaScript.</p>
-  <hr>
-  <h3>Education</h3>
-  <ul>
-    <li><strong>University of Victoria</strong>
-      <ul>
-        <li>Fourth Year Biomedical Engineering Student</li>
-        <li>Attended from September 2015 to Present
-        <li>Expected graduation of Fall 2019</li>
-      </ul>
-    </li>
-    <li><strong>Thompson Rivers University</strong>
-      <ul>
-        <li>Completed Engineering Transfer Program</li>
-        <li>Attended from September 2013 to April 2015</li>
-      </ul>
-  </ul>
-  <hr>
-  <h3>Hobbies</h3>
-  <ol>
-    <li>Strength training</li>
-    <li>Hiking</li>
-    <li>Gaming</li>
-    <li>Learning to code</li>
-  </ol>
-  <hr>
-  <h3>Work Experience</h3>
-  <table cellspacing=20>
-    <thead>
-      <tr>
-        <th>Dates</th>
-        <th>Work</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>January 2019 - Present</td>
-        <td>Senior Mechanical Engineering Assistant</td>
-      </tr>
-      <tr>
-        <td>May 2018 - August 2019</td>
-        <td>Virtual Reality Mobile Application Developer</td>
-      </tr>
-    </tbody>
-  </table>
-  <hr>
-  <h3>Skills</h3>
-  <table cellspacing="10">
-    <thead>
-      <th>Programming Languages</th>
-    </thead>
-    <tr>
-      <td>
-        <table>
-          <tr>
-            <td>Python</td>
-          </tr>
-          <tr>
-            <td>C</td>
-          </tr>
-          <tr>
-            <td>HTML/CSS/JavaScript</td>
-          </tr>
-          <tr>
-            <td>C#</td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
-
-  <p><strong><a href="contact.html">Contact Me</a></strong></p>
 </body>
 
 </html>
