Changed index.html location along with references to CSS and images

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Derek's CV</title>
-  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Nunito+Sans|Patua+One|Sacramento" rel="stylesheet">
 
@@ -12,11 +12,11 @@
 
 <body>
   <div class="topContainer">
-      <img class="top-cloud" src="../images/cloud.png" alt="cloud-img">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <h1>I'm Derek</h1>
     <h2>a fourth year biomedical engineering student</h2>
-    <img class="bottom-cloud" src="../images/cloud.png" alt="cloud-img">
-    <img src="../images/mountain.png" alt="mountain-img">
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+    <img src="images/mountain.png" alt="mountain-img">
   </div>
   <div class="middle-container">
     <div class="profile">
@@ -28,12 +28,12 @@
     <div class="skills">
       <h2>My Skills</h2>
       <div class="skill-row">
-        <img class="programSkill" src=../images/programming.png alt="programming-img">
+        <img class="programSkill" src=images/programming.png alt="programming-img">
         <h3>Programming</h3>
         <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
       </div>
       <div class="skill-row">
-        <img class="cadSkill" src="../images/3d-printing.png" alt="cad-img">
+        <img class="cadSkill" src="images/3d-printing.png" alt="cad-img">
         <h3>3D CAD Modelling & 3D Printing</h3>
         <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
       </div>
@@ -50,7 +50,7 @@
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-    <p>© 2019 Derek Bell.</p>
+    <p class="copyright">© 2019 Derek Bell.</p>
   </div>
 
 </body>
