--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
       <div class="skill-row">
         <img class="programSkill" src=images/programming.png alt="programming-img">
         <h3>Programming</h3>
-        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        <p>Learning to code has been a recent activity of mine ourside of my studies and co-op work terms. I have since learned Python, HTML5, CSS3, JavaScript and C# through online courses on Udemy and Udacity. This website is a showcase of my HTML and CSS knowledge!</p>
       </div>
       <div class="skill-row">
         <img class="cadSkill" src="images/3d-printing.png" alt="cad-img">
         <h3>3D CAD Modelling & 3D Printing</h3>
-        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        <p>For the past 2 years, I have been a volunteer and completed 2 4-month co-op terms at the <a href="https://www.victoriahandproject.com">Victoria Hand Project</a>. This led to me becoming extremely proficient at SolidWorks and 3D printing through creating custom 3D printed upper-limb prosthetic devices for the developing world.  </p>
       </div>
     </div>
     <hr>
