--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="skill-row">
         <img class="programSkill" src=images/programming.png alt="programming-img">
         <h3>Programming</h3>
-        <p>Learning to code has been a recent activity of mine ourside of my studies and co-op work terms. I have since learned Python, HTML5, CSS3, JavaScript and C# through online courses on Udemy and Udacity. This website is a showcase of my HTML and CSS knowledge!</p>
+        <p>Learning to code has been a recent activity of mine ourside of my studies and co-op work terms. I have since learned Python, Swift, HTML5, CSS3, JavaScript and C# through online courses on Udemy and Udacity. This website is a showcase of my HTML and CSS knowledge!</p>
       </div>
       <div class="skill-row">
         <img class="cadSkill" src="images/3d-printing.png" alt="cad-img">
@@ -40,10 +40,10 @@
     </div>
     <hr>
     <div class="contact-me">
-      <h2>Get In Touch</h2>
-      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-      <p class="contact-message">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-      <a class="butn" href="mailto:derek.bell10@gmail.com">CONTACT ME</a>
+      <h2>Contact Me</h2>
+      <h3>Email: derek.bell10@gmail.com</h3>
+      <p class="contact-message">Click the link below to see a more in depth look into what I have accomplished through my undergrad degree!</p>
+      <a class="butn" href="mailto:derek.bell10@gmail.com">View My Resume</a>
     </div>
   </div>
 
