Changed directory of resume anchor tag

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <h2>Contact Me</h2>
       <h3>Email: derek.bell10@gmail.com</h3>
       <p class="contact-message">Click the link below to see a more in depth look into what I have accomplished through my undergrad degree!</p>
-      <a class="butn" href="mailto:derek.bell10@gmail.com">View My Resume</a>
+      <a class="butn" href="C:\Users\derek\OneDrive\Desktop">View My Resume</a>
     </div>
   </div>
 
