--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/derek-bell-54444b159/">LinkedIn</a>
     <p class="copyright">© 2019 Derek Bell.</p>
   </div>
 
