--- a/index.html
+++ b/index.html
@@ -6,31 +6,31 @@
   <title>Derek's CV</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Nunito+Sans|Patua+One|Sacramento" rel="stylesheet">
 
 </head>
 
 <body>
-  <div class="topContainer">
+  <div class="topContainer text-center">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-    <h1>I'm Derek</h1>
-    <h2>a fourth year biomedical engineering student</h2>
+    <h1 class="text-center">I'm Derek</h1>
+    <h2 class="text-center">a fourth year biomedical engineering student</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-    <img src="images/mountain.png" alt="mountain-img">
+    <img class="Circular rounded-circle" src="https://scontent.fyvr3-1.fna.fbcdn.net/v/t1.0-1/p160x160/44416416_10158377854109848_4263308825773211648_n.jpg?_nc_cat=107&_nc_ht=scontent.fyvr3-1.fna&oh=d6e20406130fec8ff9fd45f9a6dd13eb&oe=5D1F3C88" alt="mountain-img">
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img class='Circular' src="https://scontent.fyvr3-1.fna.fbcdn.net/v/t1.0-1/p160x160/44416416_10158377854109848_4263308825773211648_n.jpg?_nc_cat=107&_nc_ht=scontent.fyvr3-1.fna&oh=d6e20406130fec8ff9fd45f9a6dd13eb&oe=5D1F3C88" alt="profile-pic">
-      <h2>Hello</h2>
+      <h2 class="text-center">Hello</h2>
       <p class="intro">I am currently in my fourth year of engineering at the University of Victoria, and am learning various programming languages.</p>
     </div>
     <hr>
     <div class="skills">
-      <h2>My Skills</h2>
+      <h2 class="text-center">My Skills</h2>
       <div class="skill-row">
         <img class="programSkill" src=images/programming.png alt="programming-img">
         <h3>Programming</h3>
-        <p>Learning to code has been a recent activity of mine ourside of my studies and co-op work terms. I have since learned Python, Swift, HTML5, CSS3, JavaScript and C# through online courses on Udemy and Udacity. This website is a showcase of my HTML and CSS knowledge!</p>
+        <p>Learning to code has been a recent activity of mine outside of my studies and co-op work terms. I have since learned Python, Swift, HTML5, CSS3, JavaScript and C# through online courses on Udemy and Udacity. This website is a showcase of my HTML and CSS knowledge!</p>
       </div>
       <div class="skill-row">
         <img class="cadSkill" src="images/3d-printing.png" alt="cad-img">
@@ -40,7 +40,7 @@
     </div>
     <hr>
     <div class="contact-me">
-      <h2>Contact Me</h2>
+      <h2 class="text-center">Contact Me</h2>
       <h3>Email: derek.bell10@gmail.com</h3>
       <p class="contact-message">Click the link below to see a more in depth look into what I have accomplished through my undergrad degree!</p>
       <a class="butn" href="C:\Users\derek\OneDrive\Desktop">View My Resume</a>
