--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="topContainer text-center">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-    <h1 class="text-center">I'm Derek</h1>
+    <h1 class="text-center animated">I'm Derek</h1>
     <h2 class="text-center">a fourth year biomedical engineering student</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img class="Circular rounded-circle" src="https://scontent.fyvr3-1.fna.fbcdn.net/v/t1.0-1/p160x160/44416416_10158377854109848_4263308825773211648_n.jpg?_nc_cat=107&_nc_ht=scontent.fyvr3-1.fna&oh=d6e20406130fec8ff9fd45f9a6dd13eb&oe=5D1F3C88" alt="mountain-img">
@@ -30,7 +30,7 @@
       <div class="skill-row">
         <img class="programSkill" src=images/programming.png alt="programming-img">
         <h3>Programming</h3>
-        <p>Learning to code has been a recent activity of mine outside of my studies and co-op work terms. I have since learned Python, Swift, HTML5, CSS3, JavaScript and C# through online courses on Udemy and Udacity. This website is a showcase of my HTML and CSS knowledge!</p>
+        <p>Learning to code has been a recent activity of mine outside of my studies. I have since learned Python, Swift, HTML5, CSS3, JavaScript and C# through online courses on Udemy and Udacity. Currently, I am learning Ruby and Ruby on Rails at my cuurent co-op! This website is a showcase of my HTML and CSS knowledge.</p>
       </div>
       <div class="skill-row">
         <img class="cadSkill" src="images/3d-printing.png" alt="cad-img">
@@ -39,16 +39,16 @@
       </div>
     </div>
     <hr>
-    <div class="contact-me">
-      <h2 class="text-center">Contact Me</h2>
-      <h3>Email: derek.bell10@gmail.com</h3>
+    <div class="contact-me text-center">
+      <h2 class="text-center contact-text">Contact Me</h2>
+      <h3 class="text-center">Email: derek.bell10@gmail.com</h3>
       <p class="contact-message">Click the link below to see a more in depth look into what I have accomplished through my undergrad degree!</p>
       <a class="butn" href="C:\Users\derek\OneDrive\Desktop">View My Resume</a>
     </div>
   </div>
 
 
-  <div class="bottom-container">
+  <div class="bottom-container text-center">
     <a class="footer-link" href="https://www.linkedin.com/in/derek-bell-54444b159/">LinkedIn</a>
     <p class="copyright">© 2019 Derek Bell.</p>
   </div>
