Fixed link to resume

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="skill-row">
         <img class="cadSkill" src="images/3d-printing.png" alt="cad-img">
         <h3>3D CAD Modelling & 3D Printing</h3>
-        <p>For the past 2 years, I have been a volunteer and completed 2 4-month co-op terms at the <a href="https://www.victoriahandproject.com">Victoria Hand Project</a>. This led to me becoming extremely proficient at SolidWorks and 3D printing through creating custom 3D printed upper-limb prosthetic devices for the developing world.  </p>
+        <p>For the past 2 years, I have been a volunteer and completed 2 4-month co-op terms at the <a href="https://www.victoriahandproject.com">Victoria Hand Project</a>. This led to me becoming extremely proficient at CAD programs such as SolidWorks and AutoDesk Fusion 360. Further, I have developed expert experience in 3D printing through creating custom 3D printed upper-limb prosthetic devices for the developing world.  </p>
       </div>
     </div>
     <hr>
@@ -43,7 +43,7 @@
       <h2 class="text-center contact-text">Contact Me</h2>
       <h3 class="text-center">Email: derek.bell10@gmail.com</h3>
       <p class="contact-message">Click the link below to see a more in depth look into what I have accomplished through my undergrad degree!</p>
-      <a class="butn" href="C:\Users\derek\OneDrive\Desktop">View My Resume</a>
+      <a class="butn" href="C:\Users\derek\OneDrive\Desktop\DerekBellResume.pdf">View My Resume</a>
     </div>
   </div>
 
