Fixing resume link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="middle-container">
     <div class="profile">
       <h2 class="text-center">Hello</h2>
-      <p class="intro">I am currently in my fourth year of engineering at the University of Victoria, and am learning various programming languages.</p>
+      <p class="intro">I am currently in my fourth year of engineering at the University of Victoria and am learning various programming language.</p>
     </div>
     <hr>
     <div class="skills">
@@ -43,7 +43,7 @@
       <h2 class="text-center contact-text">Contact Me</h2>
       <h3 class="text-center">Email: derek.bell10@gmail.com</h3>
       <p class="contact-message">Click the link below to see a more in depth look into what I have accomplished through my undergrad degree!</p>
-      <a class="butn" href="C:\Users\derek\OneDrive\Desktop\DerekBellResume.pdf">View My Resume</a>
+      <a class="butn" href="https://derekjbell.github.io/My-Personal-Website/Resources/DerekBellResume.pdf">View My Resume</a>
     </div>
   </div>
 
