Updates to info

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <h1 class="text-center animated">I'm Derek</h1>
     <h2 class="text-center">a fourth year biomedical engineering student</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-    <img class="Circular rounded-circle" src="https://scontent.fyvr3-1.fna.fbcdn.net/v/t1.0-1/p160x160/44416416_10158377854109848_4263308825773211648_n.jpg?_nc_cat=107&_nc_ht=scontent.fyvr3-1.fna&oh=d6e20406130fec8ff9fd45f9a6dd13eb&oe=5D1F3C88" alt="mountain-img">
+    <img class="Circular rounded-circle pfp" src="images/Derek_Profile.jpg" alt="Derek-img">
   </div>
   <div class="middle-container">
     <div class="profile">
-      <h2 class="text-center">Hello</h2>
-      <p class="intro">I am currently in my fourth year of engineering at the University of Victoria and am learning various programming language.</p>
+      <h2 class="text-center">Currently</h2>
+      <p class="intro">I'm in my fourth year of engineering at the University of Victoria and am graduating in December 2019.</p>
     </div>
     <hr>
     <div class="skills">
@@ -30,7 +30,7 @@
       <div class="skill-row">
         <img class="programSkill" src=images/programming.png alt="programming-img">
         <h3>Programming</h3>
-        <p>Learning to code has been a recent activity of mine outside of my studies. I have since learned Python, Swift, HTML5, CSS3, JavaScript and C# through online courses on Udemy and Udacity. Currently, I am learning Ruby and Ruby on Rails at my cuurent co-op! This website is a showcase of my HTML and CSS knowledge.</p>
+        <p> Currently, I am completeing an 8-month software engineering internship at CanAssist. Here I have been leading the development of an iOS app that is able to take patient limb measurements using augmented reality. This app has a full backend server and sync between any iDevice using Google Firestore. Besides this I have been updating and bugfixing various other iOS apps that are available for download on the app store. I have also completed a 4-month entrepreneurial software engineering internship where I was able to present the idea to an investor, and recieved $10,000 to develop a concussion rehabilitation app using Unity. This app used multiple object tracking to assess a patient's condition. Besides Swift, my top languages are Python, C++, C, C#, JavaScript. This website is a showcase of my HTML and CSS knowledge.</p>
       </div>
       <div class="skill-row">
         <img class="cadSkill" src="images/3d-printing.png" alt="cad-img">
@@ -46,7 +46,6 @@
       <a class="butn" href="https://derekjbell.github.io/My-Personal-Website/Resources/DerekBellResume.pdf">View My Resume</a>
     </div>
   </div>
-
 
   <div class="bottom-container text-center">
     <a class="footer-link" href="https://www.linkedin.com/in/derek-bell-54444b159/">LinkedIn</a>
